package es.udc.agon.backend.model.entities;

public enum EstadoEncuentro {
    PENDIENTE, JUGADO, APLAZADO, SOLICITADO_APLAZAMIENTO
}
