package es.udc.agon.backend.model.entities;

public enum EstadoSolicitud {
    PENDIENTE, ACEPTADO, RECHAZADO
}
