package es.udc.agon.backend.model.entities;

public enum EstadoTorneo {
    RECLUTANDO, INSCRIPCION_CERRADA, FASE_GRUPOS, PLAYOFF, FINALIZADO
}
