package es.udc.agon.backend.model.entities;

public enum TipoJornada {
    LIGA_4_SETS, PLAYOFF_BEST_OF_5
}
