package es.udc.agon.backend.model.entities;

public enum TipoSolicitud {
    PROPUESTA,
    PETICION,
    SOLICITUD_INSCRIPCION
}
